# umbra

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  publish.sh  pyproject.toml  umbra.service
.github/workflows/: deploy.yml  release.yml  tests.yml
engine/crates/obscura-js/src/: runtime.rs
scripts/: make_demo_gif.py
tests/: test_umbra.py
umbra/: __init__.py  cli.py  engine.py  extract.py  identity.py  proxy.py
