[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umbra"
version = "0.1.0"
description = "Umbra — the shadow engine. An AI-native stealth browser for agents: persistent identities, proxy mesh, and LLM-grounded extraction on top of the Obscura CDP core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Celebez Research", email = "89258681+Celebez@users.noreply.github.com" }]
keywords = ["browser", "stealth", "scraping", "ai-agents", "cdp", "obscura", "web-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
umbra = "umbra.cli:main"

[project.urls]
Homepage = "https://github.com/Celebez/umbra"
Repository = "https://github.com/Celebez/umbra"
Documentation = "https://github.com/Celebez/umbra#readme"

[tool.setuptools.packages.find]
include = ["umbra*"]
